; ModuleID = '/home/carl/AnghaBench/postgres/src/port/extr_strerror.c_pg_strerror_r.c'
source_filename = "/home/carl/AnghaBench/postgres/src/port/extr_strerror.c_pg_strerror_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"operating system error %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pg_strerror_r(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i8* @gnuish_strerror_r(i32 %8, i8* %9, i64 %10)
  store i8* %11, i8** %7, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %24, label %14

14:                                               ; preds = %3
  %15 = load i8*, i8** %7, align 8
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load i8*, i8** %7, align 8
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %22, 63
  br i1 %23, label %24, label %27

24:                                               ; preds = %19, %14, %3
  %25 = load i32, i32* %4, align 4
  %26 = call i8* @get_errno_symbol(i32 %25)
  store i8* %26, i8** %7, align 8
  br label %27

27:                                               ; preds = %24, %19
  %28 = load i8*, i8** %7, align 8
  %29 = icmp eq i8* %28, null
  br i1 %29, label %30, label %37

30:                                               ; preds = %27
  %31 = load i8*, i8** %5, align 8
  %32 = load i64, i64* %6, align 8
  %33 = call i8* @_(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @snprintf(i8* %31, i64 %32, i8* %33, i32 %34)
  %36 = load i8*, i8** %5, align 8
  store i8* %36, i8** %7, align 8
  br label %37

37:                                               ; preds = %30, %27
  %38 = load i8*, i8** %7, align 8
  ret i8* %38
}

declare dso_local i8* @gnuish_strerror_r(i32, i8*, i64) #1

declare dso_local i8* @get_errno_symbol(i32) #1

declare dso_local i32 @snprintf(i8*, i64, i8*, i32) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
